test/fail/error01.sest
module Error01 = struct
  val main() =
    let x = /* here is /* a comment */  1 in
    x
end
